--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
-  path_provider: ^2.1.5
-  sqflite: ^2.4.1
-  path: ^1.9.0
+  # path_provider: ^2.1.5
+  # sqflite: ^2.4.1
+  cloud_firestore: ^5.5.0
+  # lottie: ^3.1.3
+  sign_in_button: ^3.2.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - lib/assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
