--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
-  # path_provider: ^2.1.5
-  # sqflite: ^2.4.1
-  cloud_firestore: ^5.5.0
-  # lottie: ^3.1.3
-  sign_in_button: ^3.2.0
-  google_sign_in: ^6.2.2
+ 
 
 dev_dependencies:
   flutter_test:
